# NEW_DICOM_VIEWER

./: .gitignore  README.md  check-orthanc.ps1  dev.ps1  package.json  test_pacs_query.py
.claude/: settings.json  settings.local.json
Viewers-release-3.12/: rsbuild.config.ts
Viewers-release-3.12/d3-shims/: d3-array.js  d3-interpolate.js
Viewers-release-3.12/extensions/ukubona/: package.json
Viewers-release-3.12/extensions/ukubona/src/: getCustomizationModule.tsx  getToolbarModule.tsx  id.ts  index.tsx  tauriBridge.ts
Viewers-release-3.12/extensions/ukubona/src/components/: LoginPage.tsx  ModeSelectModal.tsx  PacsConnector.tsx  PacsModal.tsx  PacsStudyList.tsx  ReportButton.tsx  ReportManager.tsx  ReportModal.tsx  SettingsPage.tsx  StudyCard.tsx  StudyCardGrid.tsx  UkubonaAIButton.tsx  UkubonaAIModal.tsx  UploadZone.tsx
Viewers-release-3.12/modes/basic/src/: index.tsx  toolbarButtons.ts
Viewers-release-3.12/platform/app/: package.json  pluginConfig.json
Viewers-release-3.12/platform/app/public/config/: ukubona.js
Viewers-release-3.12/platform/app/public/html-templates/: index.html
Viewers-release-3.12/platform/app/src/routes/: index.tsx
Viewers-release-3.12/platform/ui/: tailwind.config.js
Viewers-release-3.12/platform/ui-next/: tailwind.config.js
Viewers-release-3.12/platform/ui-next/src/: tailwind.css
src-tauri/: Cargo.toml  ORTHANC_SETUP.md  tauri.bundle.conf.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: cleanup.rs  commands.rs  cors_proxy.rs  lib.rs  orthanc.rs  security.rs  storage.rs
(+2 files in other folders)
